# python-data-parsing

./: .gitignore  LICENSE  convert.py  example-strong-data.csv
renovate_to_db/: README.md  pyproject.toml
renovate_to_db/queries/: dependencies_by_manager.sql  outdated_dependencies.sql  repository_summary.sql  skipped_or_unversioned.sql  top_update_candidates.sql
renovate_to_db/scripts/: run_query.py
renovate_to_db/src/renovate_to_db/: __init__.py  cli.py  ingest.py
workout_data/: convert.py  plot.py
